--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Set up JDK 8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 8
+    - name: Export Java 8 Home
+      run: echo "##[set-env name=JAVA_HOME_8;]$JAVA_HOME"
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
