Re-implement as an annotation processor (easier to use)

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -6,8 +6,7 @@ sourceCompatibility = targetCompatibility = 12
 
 compileJava {
     options.compilerArgs = [
-            "--enable-preview",
-            "-Xplugin:jabel"
+            "--enable-preview"
     ]
 }
 
