--- a/jabel-javac-plugin/build.gradle
+++ b/jabel-javac-plugin/build.gradle
@@ -8,4 +8,5 @@ sourceCompatibility = targetCompatibility = 8
 dependencies {
     compile 'net.bytebuddy:byte-buddy:1.10.8'
     compile 'net.bytebuddy:byte-buddy-agent:1.10.8'
+    compile 'org.apache.maven:maven-plugin-api:3.0'
 }
