Tests - can’t get the tests to fail, even when the annotation processor is (very) disabled. Passes locally, but fails on github CI.
Local:

↪ ./gradlew -version

------------------------------------------------------------
Gradle 6.2.1
------------------------------------------------------------

Build time:   2020-02-24 20:24:10 UTC
Revision:     aacbcb7e587faa6a8e7851751a76183b6187b164

Kotlin:       1.3.61
Groovy:       2.5.8
Ant:          Apache Ant(TM) version 1.10.7 compiled on September 1 2019
JVM:          13.0.2 (Oracle Corporation 13.0.2+8)
OS:           Mac OS X 10.15.6 x86_64

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -19,6 +19,11 @@ compileTestJava {
 
 test {
     doFirst {
+        def javaVersion = System.getProperty("java.version").tokenize(".").get(0).toInteger()
+        if (javaVersion != 13) {
+            throw new IllegalStateException("Must run build on Java 13 (system reported: ${javaVersion})")
+        }
+
         def java8home = System.getenv("JAVA_HOME_8")
         if (!java8home) {
             throw new IllegalStateException("JAVA_HOME_8 must be set")
@@ -28,7 +33,7 @@ test {
 }
 
 dependencies {
-    annotationProcessor project(":jabel-javac-plugin")
+//    annotationProcessor project(":jabel-javac-plugin")
 
     testCompile 'junit:junit:4.12'
 }
