Turn back on Jabel processor, now that I’ve discovered it’s gradle vs gradlew causing the discrepancy

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -33,7 +33,7 @@ test {
 }
 
 dependencies {
-//    annotationProcessor project(":jabel-javac-plugin")
+    annotationProcessor project(":jabel-javac-plugin")
 
     testCompile 'junit:junit:4.12'
 }
