Allow running on JDK 16 (#63)
* Update Gradle to 7.0.2

* Module `jdk.compiler` does not export packages
`com.sun.tools.javac.code` and `com.sun.tools.javac.parser`,
so ask ByteBuddy to export them before loading class file that
references them.

* `com.sun.tools.javac.code.Source.Feature#minLevel` is private,
so ask ByteBuddy to open package `com.sun.tools.javac.code`.


Co-authored-by: Sergei Egorov <bsideup@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
       with:
         java-version: 8
     - name: Export Java 8 Home
-      run: echo "##[set-env name=JAVA_HOME_8;]$JAVA_HOME"
+      run: echo "JAVA_HOME_8=$JAVA_HOME" >> $GITHUB_ENV
     - name: Set up JDK
       uses: actions/setup-java@v1
       with:
-        java-version: 14
+        java-version: 16
     - name: Build with Gradle
       run: ./gradlew build
