--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,10 +2,9 @@ plugins {
     id "java"
 }
 
-sourceCompatibility = 14
-targetCompatibility = 8
+configure([tasks.compileJava]) {
+    sourceCompatibility = 16
 
-tasks.withType(JavaCompile).all {
     options.compilerArgs = [
             "--release", "8",
             '--enable-preview',
@@ -18,9 +17,11 @@ tasks.withType(JavaCompile).all {
     }
 }
 
-test {
+compileTestJava {
     sourceCompatibility = targetCompatibility = 8
+}
 
+test {
     javaLauncher = javaToolchains.launcherFor {
         languageVersion = JavaLanguageVersion.of(8)
     }
