--- a/example/build.gradle
+++ b/example/build.gradle
@@ -23,6 +23,7 @@ test {
 
 dependencies {
     annotationProcessor project(":jabel-javac-plugin")
+    compileOnly project(":jabel-javac-plugin")
 
     testImplementation 'junit:junit:4.12'
 }
