Use `byte-buddy-parent`

--- a/jabel-javac-plugin/build.gradle
+++ b/jabel-javac-plugin/build.gradle
@@ -6,8 +6,9 @@ plugins {
 sourceCompatibility = targetCompatibility = 8
 
 dependencies {
-    implementation 'net.bytebuddy:byte-buddy:1.12.11'
-    implementation 'net.bytebuddy:byte-buddy-agent:1.12.11'
+    implementation platform('net.bytebuddy:byte-buddy-parent:1.12.11')
+    implementation 'net.bytebuddy:byte-buddy'
+    implementation 'net.bytebuddy:byte-buddy-agent'
     implementation 'net.java.dev.jna:jna:5.12.1'
 }
 
